[package]
name = "openai-cost"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Calculate OpenAI API call cost from a usage block. Cache-aware (cached_input_tokens), supports GPT-5, GPT-4.1, o3, o4 model families, BYO pricing override. No SDK dependency."
authors = ["Mukunda Rao Katta <mukunda.vjcs6@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/MukundaKatta/openai-cost"
homepage = "https://github.com/MukundaKatta/openai-cost"
documentation = "https://docs.rs/openai-cost"
readme = "README.md"
keywords = ["openai", "gpt", "llm", "cost", "pricing"]
categories = ["api-bindings", "science"]
exclude = [".github/*", "target/*"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]

[dev-dependencies]
serde_json = "1"
